--- a/styles/app.css
+++ b/styles/app.css
@@ -2,6 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
+body::-webkit-scrollbar {
+  width: 0.7em;
+}
+body::-webkit-scrollbar-track {
+  background-color: #e7e7e7;
+  border-radius: 100vh;
+}
+body::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(73deg, #5665ae, #4ba1d9);
+  box-shadow: rgba(56, 140, 235, 0.84) 0px 8px 16px 0px;
+  border-radius: 100vh;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9;
+  transition: all 300ms ease-in-out;
+}
+.scroll-down header {
+  transform: translate3d(0, -100%, 0);
+}
+.scroll-up header {
+  background-color: #f7f8fc;
+  filter: drop-shadow(0px -10px 20px rgb(170, 170, 170));
+}
+
 @media (max-width: 600px) {
   [data-reach-dialog-content] {
     width: 90vw;
