--- a/styles/app.css
+++ b/styles/app.css
@@ -151,10 +151,10 @@ header {
   position: relative;
 }
 .semester-1 {
-  background-image: linear-gradient(45deg, #4ba1d9, #5665ae);
+  background-image: linear-gradient(45deg, #08b5d5, #3a83f5);
 }
 .semester-2 {
-  background-image: linear-gradient(90deg, #3cc2ae, #0f70f0);
+  background-image: linear-gradient(90deg, #10a4e9, #0f70f0);
 }
 
 /* GuidLine row different view */
@@ -444,7 +444,7 @@ header {
 }
 
 .bg-test {
-  background-color: #f7f8fc;
+  background-color: #fafdff;
 }
 
 /* .ql-editor {
