--- a/styles/app.css
+++ b/styles/app.css
@@ -10,8 +10,7 @@ body::-webkit-scrollbar-track {
   border-radius: 100vh;
 }
 body::-webkit-scrollbar-thumb {
-  background-image: linear-gradient(73deg, #5665ae, #4ba1d9);
-  box-shadow: rgba(56, 140, 235, 0.84) 0px 8px 16px 0px;
+  background-image: linear-gradient(73deg, #06b6d4, #3b82f6);
   border-radius: 100vh;
 }
 
