--- a/styles/app.css
+++ b/styles/app.css
@@ -21,13 +21,18 @@ header {
   width: 100%;
   z-index: 9;
   transition: all 300ms ease-in-out;
+  background-color: #fafdff;
 }
 .scroll-down header {
   transform: translate3d(0, -100%, 0);
 }
 .scroll-up header {
-  background-color: #f7f8fc;
-  filter: drop-shadow(0px -10px 20px rgb(170, 170, 170));
+  background-color: #fafdff;
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+}
+
+.nav-shadow {
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
 }
 
 @media (max-width: 600px) {
@@ -445,21 +450,6 @@ header {
 .bg-test {
   background-color: #fafdff;
 }
-
-/* .ql-editor {
-  counter-reset: line;
-  padding-left: 0;
-}
-
-.ql-editor p:before {
-  counter-increment: line;
-  content: counter(line);
-  display: inline-block;
-  border-right: 1px solid #ddd;
-  padding: 0 0.5em;
-  margin-right: 0.5em;
-  color: #888;
-} */
 
 .siliguri-font {
   font-family: 'Hind Siliguri', sans-serif;
