--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3679,6 +3679,11 @@ header {
     padding-right: 5rem;
   }
 
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
   .md\:text-left {
     text-align: left;
   }
