--- a/styles/app.css
+++ b/styles/app.css
@@ -2,6 +2,125 @@
 @tailwind components;
 @tailwind utilities;
 
+/* barlow-200 - latin */
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+  src: url('/fonts/barlow-v12-latin-200.eot'); /* IE9 Compat Modes */
+  src: local(''), url('/fonts/barlow-v12-latin-200.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('/fonts/barlow-v12-latin-200.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('/fonts/barlow-v12-latin-200.woff') format('woff'),
+    /* Modern Browsers */ url('/fonts/barlow-v12-latin-200.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('/fonts/barlow-v12-latin-200.svg#Barlow') format('svg'); /* Legacy iOS */
+}
+/* barlow-300 - latin */
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('/fonts/barlow-v12-latin-300.eot'); /* IE9 Compat Modes */
+  src: local(''), url('/fonts/barlow-v12-latin-300.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('/fonts/barlow-v12-latin-300.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('/fonts/barlow-v12-latin-300.woff') format('woff'),
+    /* Modern Browsers */ url('/fonts/barlow-v12-latin-300.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('/fonts/barlow-v12-latin-300.svg#Barlow') format('svg'); /* Legacy iOS */
+}
+/* barlow-regular - latin */
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('/fonts/barlow-v12-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''), url('/fonts/barlow-v12-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('/fonts/barlow-v12-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('/fonts/barlow-v12-latin-regular.woff') format('woff'),
+    /* Modern Browsers */ url('/fonts/barlow-v12-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('/fonts/barlow-v12-latin-regular.svg#Barlow') format('svg'); /* Legacy iOS */
+}
+/* barlow-500 - latin */
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('/fonts/barlow-v12-latin-500.eot'); /* IE9 Compat Modes */
+  src: local(''), url('/fonts/barlow-v12-latin-500.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('/fonts/barlow-v12-latin-500.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('/fonts/barlow-v12-latin-500.woff') format('woff'),
+    /* Modern Browsers */ url('/fonts/barlow-v12-latin-500.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('/fonts/barlow-v12-latin-500.svg#Barlow') format('svg'); /* Legacy iOS */
+}
+/* barlow-500italic - latin */
+@font-face {
+  font-family: 'Barlow';
+  font-style: italic;
+  font-weight: 500;
+  font-display: swap;
+  src: url('/fonts/barlow-v12-latin-500italic.eot'); /* IE9 Compat Modes */
+  src: local(''), url('/fonts/barlow-v12-latin-500italic.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('/fonts/barlow-v12-latin-500italic.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('/fonts/barlow-v12-latin-500italic.woff') format('woff'),
+    /* Modern Browsers */ url('/fonts/barlow-v12-latin-500italic.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('/fonts/barlow-v12-latin-500italic.svg#Barlow') format('svg'); /* Legacy iOS */
+}
+/* barlow-600 - latin */
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url('/fonts/barlow-v12-latin-600.eot'); /* IE9 Compat Modes */
+  src: local(''), url('/fonts/barlow-v12-latin-600.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('/fonts/barlow-v12-latin-600.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('/fonts/barlow-v12-latin-600.woff') format('woff'),
+    /* Modern Browsers */ url('/fonts/barlow-v12-latin-600.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('/fonts/barlow-v12-latin-600.svg#Barlow') format('svg'); /* Legacy iOS */
+}
+/* barlow-700 - latin */
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('/fonts/barlow-v12-latin-700.eot'); /* IE9 Compat Modes */
+  src: local(''), url('/fonts/barlow-v12-latin-700.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('/fonts/barlow-v12-latin-700.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('/fonts/barlow-v12-latin-700.woff') format('woff'),
+    /* Modern Browsers */ url('/fonts/barlow-v12-latin-700.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('/fonts/barlow-v12-latin-700.svg#Barlow') format('svg'); /* Legacy iOS */
+}
+/* barlow-800 - latin */
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+  src: url('/fonts/barlow-v12-latin-800.eot'); /* IE9 Compat Modes */
+  src: local(''), url('/fonts/barlow-v12-latin-800.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('/fonts/barlow-v12-latin-800.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('/fonts/barlow-v12-latin-800.woff') format('woff'),
+    /* Modern Browsers */ url('/fonts/barlow-v12-latin-800.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('/fonts/barlow-v12-latin-800.svg#Barlow') format('svg'); /* Legacy iOS */
+}
+/* barlow-900 - latin */
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+  src: url('/fonts/barlow-v12-latin-900.eot'); /* IE9 Compat Modes */
+  src: local(''), url('/fonts/barlow-v12-latin-900.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('/fonts/barlow-v12-latin-900.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('/fonts/barlow-v12-latin-900.woff') format('woff'),
+    /* Modern Browsers */ url('/fonts/barlow-v12-latin-900.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('/fonts/barlow-v12-latin-900.svg#Barlow') format('svg'); /* Legacy iOS */
+}
+
+/* font testing */
 body::-webkit-scrollbar {
   width: 0.7em;
 }
